--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -1,96 +1,88 @@
 .loginContainer {
     display: flex;
     position: relative;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 80px;
-  }
-  
-  .leftContainer {
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 40%;
-    margin-left: 80px; 
-  }
-  
-  .image {
-    width: 305px;
-    height: 382px;
-  }
-  
-  .leftText {
-    font-weight: 700;
-    text-align: center;
     margin-top: 40px;
-    font-family: 'Pretendard', sans-serif;
-  }
-  
-  .rightContainer {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin: 0 0 0 80px;
-    width: 60%;
-    top: -40px;
   }
   
   .serviceName {
     font-weight: 700;
     font-family: 'Pretendard', sans-serif;
     text-align: left;
-    font-size: 20px;
-    margin-bottom: 5px;
+    font-size: 26px;
+    margin-bottom: 30px;
+    color :#000000;
+  }
+
+  .labelContainer{
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+    font-family: 'Pretendard', sans-serif;
+    margin-top: 20px;
   }
   
   .inputField {
     position: relative;
-    background-color: rgba(132, 166, 127, 0.3);
     border-radius: 20px;
     border: 1px solid #000000;
-    width: 540px;
+    width: 420px;
     height: 60px;
-    margin-top: 15px;
+    margin-top: 6px;
     padding-left: 30px;
+    margin-bottom: 10px;
   }
   
   .checkboxContainer {
     display: flex;
-    text-align: left;
-    margin-bottom: 30px;
-    margin: 20px 0 40px 35px; /* 상 우 하 좌 */
+    width: 460px;
+    margin: 20px 0 30px 0;
   }
   
   .checkbox {
-    background-color: #d9d9d9;
+    background-color: #ffffff;
     border-radius: 5px;
     border: 1px solid #d9d9d9; 
+    margin-right: 5px;
+  }
+
+  .checkbox2 {
+    background-color: #ffffff;
+    border-radius: 5px;
+    border: 1px solid #d9d9d9; 
+    margin-right: 5px;
+    margin-left: 25px;
   }
   
   .checkboxLabel {
     font-family: 'Pretendard', sans-serif;
     margin-right: 15px;
     font-weight: 400;
-    color: #000000;
+    color: #818181;
   }
   
   .loginBtn {
-    background-color: rgba(217, 217, 217, 0.3);
-    height: 64.455px;
-    width: 280px;
+    background-color: #84A67F;
+    height: 48px;
+    width: 320px;
     border-radius: 15px;
-    color: rgba(0, 0, 0, 0.3);
+    font-family: 'Pretendard', sans-serif;
+    color: #ffffff;
+    font-size: 18px;
     border: 1px solid rgba(217, 217, 217, 0.3);
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+    margin-top: 30px;
   }
   
   .loginP {
     color: rgba(0, 0, 0, 0.5);
     font-size: 10px;
+    text-decoration: none;
   }
   
   .loginP2 {
@@ -103,8 +95,8 @@
   
   .btnAndText {
     display: flex; 
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: 0 auto 0 145px;
+    margin-left: 18px;
   }
