--- a/src/components/Fixed.module.css
+++ b/src/components/Fixed.module.css
@@ -1,6 +1,81 @@
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;  
+}
+
+.header{
+    box-sizing: border-box;
+    border: none;
+    background-color: white;
+    width: 100%;
+    height: 150px;
+    color: black;
+}
+
+.textalign1{
+    position: absolute;
+    font-weight: bolder;
+    top: 50px;
+    left: 100px;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.textalign2{
+    width: 200px;
+    height: 30px;
+    position: absolute;
+    top: 60px;
+    right: 100px;
+    display: flex;
+    justify-content: end;
+    cursor: pointer;
+}
+
+.text2margin{
+    margin-right: 15px;
+}
+
 .nav{
-    background-color: black;
-    width: 100px;
-    height: 100px;
-    color: wheat;
+    box-sizing: border-box;
+    width: 100%;
+    height: 30px;
+    border-top: solid 1px #ccc;
+    border-bottom: solid 1px #ccc;
+}
+
+.navflex{
+    display: flex;
+    justify-content: flex-start;
+    font-weight: bolder;
+    position: absolute;
+    left: 70px;
+    cursor: pointer;
+}
+
+.navTextMargin{
+    margin-right: 15px;
+}
+
+.nav ul li{
+    list-style: none;
+}
+
+footer .inner {
+    display: flex;
+    justify-content: space-between;
+    max-width: var(--layout-max-width);
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 60px;
+    color: #676358;
+    position: absolute;
+    bottom: 0px;
+    border-top: solid 1px gray;
+}
+
+.inner ul{
+    list-style: none;
 }
