--- a/src/components/Fixed.module.css
+++ b/src/components/Fixed.module.css
@@ -10,14 +10,14 @@ header {
     border: none;
     background-color: white;
     width: 100%;
-    height: 150px;
+    height: 120px;
     color: black;
 }
 
 .textalign1{
     position: absolute;
     font-weight: bolder;
-    top: 50px;
+    top: 40px;
     left: 100px;
     font-size: 30px;
     cursor: pointer;
@@ -69,11 +69,12 @@ footer .inner {
     max-width: var(--layout-max-width);
     width: 100%;
     margin: 0 auto;
-    padding: 20px 60px;
+    padding: 10px 60px;
     color: #676358;
     position: absolute;
-    bottom: 0px;
+    bottom: auto;
     border-top: solid 1px gray;
+    margin-top: 50px;
 }
 
 .inner ul{
