--- a/src/pages/Mypage/Mypage.module.css
+++ b/src/pages/Mypage/Mypage.module.css
@@ -48,7 +48,7 @@
 /* 닉넴 부분 */
 .Profile_top02_p1{
     font-size: 20px;
-    /* font-weight: bold; */
+    margin: 30px 0 0 30px;
 }
 
 .Profile_top02_p2{
@@ -156,7 +156,7 @@
 .MyPost{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     margin : 80px auto;
     width: 80%;
@@ -168,8 +168,24 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: start;
-    margin-left: 0;
-    margin-bottom: 60px;
+    margin-left: 120PX;
+    margin-bottom: 30px;
+}
+
+.MyPost_top01{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.MyPost_top_p{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: -5px;
+}
+
+.MyPost_top_p2{
+    font-size: 14px;
 }
 
 /* 글내용 부분 */
@@ -179,8 +195,144 @@
     justify-content: center;
     align-items: center;
     padding: 5px 0 5px 15px;
-    margin : 30px auto 0 auto;
-    width: 920px;
+    margin : 30px auto 0 120px;
+    width: 1040px;
     border-radius: 25px;
     border: 1px solid #84a67f;
+    height: 720px;
+}
+
+.MyPost_p{
+    color : #B6B6B6;
+}
+
+.line{
+    border-bottom: 2px solid rgba(132, 166, 127, 0.5) ;
+    width: 101.5%;
+    margin-left: -15px;
+}
+
+/* 작성된 글 */
+.List{
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    margin : 0;
+    padding: 0;
+    width: 100%;
+}
+
+/* 작성된 글이 없을 때 */
+.No_postList{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.No_postList_btn{
+    color:#ffffff;
+    background-color:#84a67f;
+    font-size:17px;
+    border-style:hidden;
+    outline:none;
+    width:131px;
+    height: 45px;
+    border-radius: 30px;
+}
+
+/* =========================================== */
+
+/* 지도 찾는 부분 */
+.map_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+    margin : 80px auto;
+}
+
+/* 젤 왼쪽 */
+.CommList_left{
+    display: flex;
+    flex-direction: column;
+    margin : 50px 0 auto 0;
+}
+
+.CommList_right_header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 0;
+}
+
+/* 지도 있는 부분 */
+.map{
+    display: flex;
+    flex-direction: column;
+}
+
+.header_p{
+    font-size: 14px;
+    font-weight: bold;
+    margin-right: 7px;
+}
+
+.header_p2{
+    font-size: 12px;
+}
+
+/* 지도 */
+.map_box{
+    height:540px;
+    width:500px;
+    border-radius:30px;
+    border: 1px solid silver;
+}
+
+/* 젤 오른쪽 부분 */
+.location{
+    display: flex;
+    flex-direction: column;
+}
+
+/* 검색부분 */
+.searchBar{
+    border: none;
+    outline: none;
+    padding: 0; 
+    margin: 0; 
+    background-color: transparent; 
+    font-family: inherit; 
+    font-size: inherit; 
+    color: inherit;
+}
+
+.search{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color:rgba(217, 217, 217, 0.5);
+    height:42.0087890625px;
+    width:360px;
+    border-radius:30px;
+    margin-bottom: 20px;
+    margin-top: 65px;
+}
+
+.icon{
+    color:silver;
+    margin : 0 10px;
+}
+
+/* 위치 검색 부분 */
+.search_location{
+    height:540px;
+    width:360px;
+    border-radius:30px;
+    border: 1px solid silver;
+    overflow-y: auto;
 }
