--- a/src/components/Fixed.module.css
+++ b/src/components/Fixed.module.css
@@ -1,17 +1,82 @@
-.nav{
-    /* background-color: wheat; */
-    width: 100%;
-    height: 100px;
-    color: wheat;
-    border-bottom: 1px solid grey;
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;  
 }
 
-/* 이건 임시로 넣은 것 언제든지 삭제 가능 */
-.fot{
-    /* background-color: wheat; */
+.header{
+    box-sizing: border-box;
+    border: none;
+    background-color: white;
     width: 100%;
-    height: 100px;
-    color: wheat;
-    margin-top: 10px;
-    border-top: 1px solid grey;
+    height: 120px;
+    color: black;
+}
+
+.textalign1{
+    position: absolute;
+    font-weight: bolder;
+    top: 40px;
+    left: 100px;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.textalign2{
+    width: 200px;
+    height: 30px;
+    position: absolute;
+    top: 60px;
+    right: 100px;
+    display: flex;
+    justify-content: end;
+    cursor: pointer;
+}
+
+.text2margin{
+    margin-right: 15px;
+}
+
+.nav{
+    box-sizing: border-box;
+    width: 100%;
+    height: 30px;
+    border-top: solid 1px #ccc;
+    border-bottom: solid 1px #ccc;
+}
+
+.navflex{
+    display: flex;
+    justify-content: flex-start;
+    font-weight: bolder;
+    position: absolute;
+    left: 70px;
+    cursor: pointer;
+}
+
+.navTextMargin{
+    margin-right: 15px;
+}
+
+.nav ul li{
+    list-style: none;
+}
+
+footer .inner {
+    display: flex;
+    justify-content: space-between;
+    max-width: var(--layout-max-width);
+    width: 100%;
+    margin: 0 auto;
+    padding: 10px 60px;
+    color: #676358;
+    position: absolute;
+    bottom: auto;
+    border-top: solid 1px gray;
+    margin-top: 50px;
+}
+
+.inner ul{
+    list-style: none;
 }
