--- a/src/pages/Mypage/Mypage.module.css
+++ b/src/pages/Mypage/Mypage.module.css
@@ -333,8 +333,7 @@
     height:540px;
     width:360px;
     border-radius:30px;
-    border: 1px solid silver;
+    border: 1px solid #84A67F;
     overflow-y: auto;
 }
-
 
