--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 230px;
   }
   
   .serviceName {
@@ -39,7 +39,7 @@
   .checkboxContainer {
     display: flex;
     width: 460px;
-    margin: 20px 0 30px 0;
+    margin: 20px 0 30px 45px;
   }
   
   .checkbox {
@@ -106,3 +106,29 @@
     justify-content: center;
     margin-left: 18px;
   }
+
+  .search{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color:white;
+    border-radius: 20px;
+    border: 1px solid #000000;
+    width: 420px;
+    height: 60px;
+    margin-bottom: 20px;
+    margin-top: 6px;
+    padding-left: 30px;
+}
+
+.inputField2{
+    border: none;
+    outline: none;
+    padding: 0; 
+    margin: 0; 
+    background-color: transparent; 
+    font-family: inherit; 
+    font-size: inherit; 
+    color: inherit;
+    margin-right: 130px;
+}
