--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 90%;
-    margin : 80px auto 0 auto;
+    margin : 230px auto 0 auto;
 }
 
 /* 왼쪽 부분 */
@@ -186,10 +186,12 @@
 
 .main_p{
     font-weight: 500;
+    margin-bottom: 0;
 }
 
 .main_p2{
     color:#b6b6b6;
+    margin-bottom: 0;
 }
 
 .main_icon{
@@ -215,12 +217,14 @@
 .write_header{
     display: flex;
     align-items: center;
-    margin : 10px 0;
+    justify-content: space-around;
+    margin : 10px auto;
 }
 
 .write_header2{
     display: flex;
-    margin : 10px 0;
+    margin : 10px auto;
+    
 }
 
 .write_header3{
@@ -243,14 +247,14 @@
 
 .write_title{
     font-family: 'Pretendard', sans-serif;
-    margin-right: 10px;
+    margin : auto 5px auto 0;
     font-size: 20px;
     width: 8%;
 }
 
 .write_title2{
     font-family: 'Pretendard', sans-serif;
-    margin-right: 5px;
+    margin : auto 5px auto 0;
     font-size: 20px;
     width: 8%;
 }
@@ -270,7 +274,7 @@
     padding: 0 100px;
     background-color:#ffffff;
     height:51px;
-    width:760px;
+    width:750px;
     border-radius:15px;
     border:1px solid #84a67f;
 }
@@ -286,7 +290,7 @@
     padding-left: 60px;
     background-color:#ffffff;
     height:51px;
-    width:700px;
+    width:760px;
     border-radius:15px;
     border:1px solid #84a67f;
 }
@@ -296,7 +300,7 @@
     padding-top: 50px;
     background-color:#ffffff;
     height:510px;
-    width:700px;
+    width:760px;
     border-radius:15px;
     border:1px solid #84a67f;
     resize: none;
