--- a/src/pages/signup/FisrstSignup.module.css
+++ b/src/pages/signup/FisrstSignup.module.css
@@ -4,7 +4,7 @@
     width: 70%;
     align-items: center;
     justify-content: center;
-    margin: 60px auto 0 auto;
+    margin: 230px auto 0 auto;
 }
 
 .title {
@@ -26,12 +26,13 @@
 
 .btn{
     background-color:#61885b;
-    height:100px;
+    height:110px;
     width:270px;
     border-radius:10px;
     display: flex;
     flex-direction: column;
     margin-right: 90px;
+    padding: auto;
 }
 
 .btn:hover,
@@ -41,7 +42,7 @@
 
 .proBtn{
     background-color:#ffd620;
-    height:110px;
+    height:120px;
     width:290px;
     border-radius:10px;
     display: flex;
@@ -57,6 +58,7 @@ strong{
 .btnP{
     color: white;
     font-size: 12px;
+    margin-top: 20px;
 }
 
 .btnP2{
@@ -65,12 +67,13 @@ strong{
     font-size: 9px;
     text-align: left;
     margin-left: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 45px;
 }
 
 .btnpContanier{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
     margin-left: 15px;
     margin-top: 5px;
