--- a/src/pages/signup/signup.module.css
+++ b/src/pages/signup/signup.module.css
@@ -3,17 +3,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin : 80px auto 80px auto;
+    margin : 230px auto 80px auto;
 }
 
 .signup_label{
     width: 540px;
-    margin: 15px 0 3px 0;
+    margin: 40px 0 3px 0;
 }
 
 .signup_checkbox_container{
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: 540px;
     margin : 40px 0 0px 0;
 }
@@ -25,6 +26,9 @@
     text-align: left;
 }
 
+.signup_checkbox_p{
+    margin-top: 14px;
+}
 
 .signup_h2{
     font-size: 32px;
@@ -50,7 +54,7 @@
   
   .signup_check_p {
     flex: 1; 
-    margin: 0 0 5px 0;
+    margin: 0 15px 5px 0;
     text-align: right; 
     cursor: pointer;
     font-size: 14px;
@@ -82,13 +86,10 @@
     margin : 30px 0 -10px 0;
 }
 
-.input_error {
-    color: #FF0000;
-    border: 2px solid #FF0000; 
-  }
+
   
   .signup_error_msg {
-    color: #FF0000;
+    color: #FF0000 !important;
     text-align: right;
     font-size: 14px;
     margin : 10px 0 0 0;
@@ -109,7 +110,7 @@
 .signup_input{
     border-radius: 20px;
     border: 1px solid #000000;
-    width: 540px;
+    width: 560px;
     height: 60px;
     position: relative;
     padding-left: 30px;
@@ -120,9 +121,9 @@
 /* 생년월일 부분 */
 .signup_date_contanier{
     padding-left: 30px;
-    width: 580px;
+    width: 600px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .input_date{
@@ -130,7 +131,8 @@
     border-radius: 20px;
     border: 1px solid #000000;
     padding-left: 30px;
-    width: 140px;
+    width: 180px;
+    margin-right: 10px;
 }
 
 .input_date2{
@@ -139,6 +141,7 @@
     border: 1px solid #000000;
     padding-left: 30px;
     width: 180px;
+    margin-right: 10px;
 }
 
 /* ============================================= */
@@ -158,6 +161,7 @@
 .signup_for{
     color : #909090;
     font-size: 16px;
+    margin-right: 30px;
     order : 1;
 }
 
@@ -201,7 +205,7 @@
 
 .signup_phone{
     padding-left: 30px;
-    width: 580px;
+    width: 600px;
     display: flex;
     justify-content: space-between;
     margin: 0 0 20px 0;
@@ -256,4 +260,50 @@
     margin : 40px auto 0 auto; /* 상 우 하 좌 */
     border : 1px solid #84A67F;
     font-size: 20px;
+}
+
+.search{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color:white;
+    border-radius: 20px;
+    border: 1px solid #000000;
+    width: 560px;
+    height: 60px;
+    margin-bottom: 20px;
+    margin-top: 6px;
+    padding-left: 30px;
+}
+
+.search_error{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color:white;
+    border-radius: 20px;
+    color: #FF0000 !important;
+    /* border: 2px solid #FF0000 !important;  */
+    width: 560px;
+    height: 60px;
+    margin-bottom: 20px;
+    margin-top: 6px;
+    padding-left: 30px;
+}
+
+
+.inputField2{
+    border: none;
+    outline: none;
+    padding: 0; 
+    margin: 0; 
+    background-color: transparent; 
+    font-family: inherit; 
+    font-size: inherit; 
+    color: inherit;
+    margin-right: 130px;
+}
+
+.iconnn{
+    margin: 0 20px 0 auto;
 }
