--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100..900&display=swap');
 
-.nanum-myeongjo-regular {
-  font-family: "Nanum Myeongjo", serif;
+.nanum-gothic-regular {
+  font-family: "Nanum Gothic", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
+
 
 a{
   text-decoration: none;
