--- a/src/pages/Mypage/Mypage.module.css
+++ b/src/pages/Mypage/Mypage.module.css
@@ -5,7 +5,7 @@
     width: 85%;
     align-items: center;
     justify-content: center;
-    margin: 80px auto;
+    margin: 230px auto 80px auto;
 }
 
 /* 상단부분 */
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: start;
     padding-right: 60px;
+    margin-left : 140px;
 }
 
 /* 상단 젤 왼쪽 */
@@ -53,7 +54,9 @@
 
 .Profile_top02_p2{
     font-size: 12px;
-    margin-top: -5px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-left: 30px;
 }
 
 /* 젤 오른쪽 */
@@ -158,7 +161,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin : 80px auto;
+    margin: 230px auto 80px auto;
     width: 80%;
 }
 
@@ -181,11 +184,12 @@
 .MyPost_top_p{
     font-size: 20px;
     font-weight: bold;
-    margin-bottom: -5px;
+    margin-top: 15px;
 }
 
 .MyPost_top_p2{
     font-size: 14px;
+    margin-top: 15px;
 }
 
 /* 글내용 부분 */
@@ -210,6 +214,14 @@
     border-bottom: 2px solid rgba(132, 166, 127, 0.5) ;
     width: 101.5%;
     margin-left: -15px;
+}
+
+.p_line{
+    background-color: #d9d9d9;
+    width: 1px;
+    height: 11px; 
+    /* border: 1px solid #d9d9d9; */
+    margin: 0 10px 15px 10px;
 }
 
 /* 작성된 글 */
@@ -251,7 +263,7 @@
     justify-content: space-evenly;
     align-items: center;
     width: 90%;
-    margin : 80px auto;
+    margin: 230px auto 80px auto;
 }
 
 /* 젤 왼쪽 */
@@ -336,4 +348,3 @@
     border: 1px solid #84A67F;
     overflow-y: auto;
 }
-
