--- a/src/pages/selftest/Blue/Blue.module.css
+++ b/src/pages/selftest/Blue/Blue.module.css
@@ -63,6 +63,7 @@
     line-height: 12%;
     font-size: 11px;
     font-weight: bold;
+    margin-bottom: 100px;
 }
 
 .section4p1{
@@ -126,6 +127,7 @@
 }
 
 /* 테스트 파트 반복 부분 */
+
 .testpart2{
     display: flex;
     justify-content: start;
@@ -175,14 +177,32 @@
     margin-right: 30px;
     background-color: white;
     margin-left: 50px;
+    position: relative; /* 체크 마크 위치를 위해 필요 */
 }
 
-.part2circlelast span{
-    position: relative;
-    left: -px;
+.active {
+    background-color: rgb(98, 155, 114);
+    border: 2px solid rgb(98, 155, 114);
 }
 
-/* 다음 페이지 버튼 */
+.active::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    width: 10px;
+    height: 20px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+}
+
+.lastButton {
+    margin-left: 100px;
+    margin-right: -15px;
+}
+
+/* 이전, 다음 페이지 버튼 */
 .pageButtonBox{
     display: flex;
     justify-content: center;
@@ -190,7 +210,7 @@
 
 .nextPage{
     box-sizing: border-box;
-    background-color:#84a67f;
+    background-color: rgb(152, 173, 158);
     width: 300px;
     height: 43px;
     border-radius: 10px;
@@ -258,7 +278,7 @@
     width: 800px;
     height: 500px;
     border-radius: 30px;
-    background-color:#bcddb7;
+    background-color: rgb(197, 231, 207);
     margin-left: 28vh;
     margin-top: 130px;
     padding: 70px 70px;
