--- a/src/pages/selftest/Blue/Blue.module.css
+++ b/src/pages/selftest/Blue/Blue.module.css
@@ -29,7 +29,7 @@
 
 .section2dsign{
     box-sizing: border-box;
-    background-color: rgb(152, 173, 158);
+    background-color:#84a67f;
     width: 150px;
     height: 43px;
     border-radius: 50px;
@@ -181,8 +181,8 @@
 }
 
 .active {
-    background-color: rgb(98, 155, 114);
-    border: 2px solid rgb(98, 155, 114);
+    background-color: rgb(151, 190, 162);
+    border: 2px solid rgb(151, 190, 162);
 }
 
 .active::after {
