--- a/src/pages/selftest/stress/Stress.module.css
+++ b/src/pages/selftest/stress/Stress.module.css
@@ -29,7 +29,7 @@
 
 .section2dsign{
     box-sizing: border-box;
-    background-color: rgb(152, 173, 158);
+    background-color:#84a67f;
     width: 150px;
     height: 43px;
     border-radius: 50px;
