마이페이지 진단결과 페이지 완성 및 링크 연결

--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -352,12 +352,14 @@
     justify-content: space-between;
     align-items: center;
     width: 740px;
+    margin-bottom: 30px;
 }
 
 /* 제목텍스트 */
 .view_h4{
     font-size: 24px;
     font-weight: bold;
+    margin-top: 30px;
 }
 
 /* 닉넴 이미지 등등 부분 */
