--- a/src/pages/Mainpages/Main1.module.css
+++ b/src/pages/Mainpages/Main1.module.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     width: 170vh;
     height: 200px;
-    background-color: rgb(113, 165, 123);
+    background-color:#84a67f;
     border-radius: 20px;
     position: relative;
     margin: 230px auto 0 auto;
@@ -20,7 +20,7 @@
 .mainText {
     font-size: 30px;
     color: white;
-    margin-left: 70px;
+    margin-left: 50vh;
     margin-top: 40px;
     line-height: 130%;
 }
@@ -45,11 +45,11 @@
 
 .main2InBox {
     margin-top: 40px;
-    margin-left: 30px;
+    margin-left: 10px;
     box-sizing: border-box;
-    width: 167vh;
+    width: 169vh;
     height: 50px;
-    background-color: rgb(174, 194, 180);
+    background-color:rgba(132, 166, 127, 0.30000001192092896);
     border-radius: 30px;
     border-top-left-radius: 0px;
     font-weight: 600;
@@ -65,12 +65,12 @@
     display: flex;
     justify-content: space-around;
     margin-top: 70px;
-    margin-right: 70px;
+    margin-left: -100px;
 }
 
 .main3Box1 {
-    background-color: rgb(238, 221, 110);
-    width: 115vh;
+    background-color:#f9ecb1;
+    width: 117vh;
     height: 170px;
     margin-left: 100px;
     border-radius: 10px;
@@ -119,8 +119,8 @@
 }
 
 .main3Box2 {
-    background-color: rgb(238, 221, 110);
-    width: 40vh;
+    background-color:#ffea8f;
+    width: 41vh;
     height: 170px;
     border-radius: 10px;
     cursor: pointer;
