--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100..900&display=swap');
 
-.nanum-myeongjo-regular {
-  font-family: "Nanum Myeongjo", serif;
+.nanum-gothic-regular {
+  font-family: "Nanum Gothic", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -11,9 +11,3 @@ a{
   text-decoration: none;
   color: inherit;
 }
-
-/* .App {
-  min-height: 100vh;
-  padding-left: 90px;
-  padding-right: 90px;
-} */
