--- a/src/pages/manager/Manager.module.css
+++ b/src/pages/manager/Manager.module.css
@@ -1,4 +1,4 @@
-.pageText{
+.pageText {
     text-align: center;
     font-size: 30px;
     font-weight: bolder;
@@ -6,75 +6,62 @@
     margin-top: 250px;
 }
 
-.acceptButtonBox{
-    display: flex;
-    justify-content: start;
-    margin-top: 100px;
-    margin-left: 110px;
-}
-
-.acceptButton1{
-    border-radius: 20px;
-    background-color: rgb(120, 156, 130);
-    width: 150px;
-    height: 50px;
-    border: none;
-    color: white;
-    margin-right: 50px;
-}
-
-.acceptButton2{
-    border-radius: 20px;
-    width: 150px;
-    height: 50px;
-    border: none;
-    background-color: rgb(165, 164, 164);
-    color: white;
-}
-
-.requestSection1{
-    margin-top: 80px;
-    margin-left: 100px;
-}
-
-.requestSection1 p{
-    margin-left: 20px;
-}
-
-.situationText span{
-    margin-right: 250px;
-    font-size: 13px;
-}
-
-.requestSection2{
-    display: flex;
-    justify-content: start;
-}
-
-.requestBox{
+.boxUpTextBox {
     box-sizing: border-box;
-    width: 200px;
-    height: 60px;
-    background-color: white;
-    border-radius: 20px;
-    border:solid 1px black;
-    margin-right: 100px;
-    margin-top: -10px;
-}
-
-.stateBox{
-    box-sizing: border-box;
-    width: 120vh;
-    height: auto;
-    border: solid 1px black;
+    width: 100%;
     border-radius: 10px;
-    margin-left: 100px;
     margin-top: 100px;
 }
 
-.stateText{
+.boxUpText {
     display: flex;
     justify-content: space-between;
+    font-size: 15px;
+    padding: 10px;
+    background-color: #f0f0f0;
+}
+
+.boxUpText p {
+    flex: 1;
+    text-align: center; /* 중앙 정렬 */
+    margin-right: 15px;
+}
+
+.stateBox {
+    box-sizing: border-box;
+    width: 100%;
+    border: solid 1px black;
+    border-radius: 10px;
+    margin-bottom: 50px;
+    overflow-x: auto;
+}
+
+.stateBox button{
+    border: none;
+    width: 70px;
+    height: 50px;
+    border-radius: 50px;
+    background-color:#d9d9d9;
+    color: white;
+}
+
+.acceptbut{
+    background-color:#84a67f;
+}
+
+.rejectbut{
+    background-color:#ffd000;
+}
+
+.stateText {
+    display: flex;
     border-bottom: solid 1px black;
-    padding: 20px 30px;
+    padding: 10px;
+    background-color: #f9f9f9;
+}
+
+.item {
+    flex: 1;
+    text-align: center; /* 중앙 정렬 */
+    padding: 5px 10px;
 }
