--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -69,8 +69,10 @@
     color:rgba(254, 254, 254, 0.5);
     background-color:rgba(132, 166, 127, 0.5);
     border : 1px solid rgba(132, 166, 127, 0.5);
-    height: 25px;
+    height: 30px;
+    width: 83px;
     margin-right: 10px;
+    font-size: 12px;
 }
 
 .selected_header_btn{
@@ -112,9 +114,9 @@
     color:#fefefe;
     background-color:#84a67f;
     border : 1px solid rgba(132, 166, 127, 0.5);
-    height: 25px;
+    height: 40px;
     margin-bottom: 10px;
-    width: 82px;
+    width: 88px;
 }
 
 .right_mid_select{
@@ -133,12 +135,15 @@
     padding: 10px 0 10px 15px;
     margin : 30px auto 0 0px;
     width: 100%;
+    height: 510px;
     border-radius: 25px;
     border: 1px solid #84a67f;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .CommList_main{
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     margin : 0;
@@ -154,7 +159,8 @@
 }
 
 .main_h3 {
-    margin : 20px 0 10px 0 ;
+    margin : 10px 0 10px 0 ;
+    font-size: 22px;
 }
 
 .main_bottom{
