--- a/src/pages/signup/signup.module.css
+++ b/src/pages/signup/signup.module.css
@@ -283,7 +283,7 @@
     background-color:white;
     border-radius: 20px;
     color: #FF0000 !important;
-    /* border: 2px solid #FF0000 !important;  */
+    border: 2px solid #FF0000 !important; 
     width: 560px;
     height: 60px;
     margin-bottom: 20px;
