--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -70,7 +70,9 @@
     background-color:rgba(132, 166, 127, 0.5);
     border : 1px solid rgba(132, 166, 127, 0.5);
     height: 25px;
+    width: 80px;
     margin-right: 10px;
+    font-size: 13px;
 }
 
 .selected_header_btn{
@@ -114,7 +116,8 @@
     border : 1px solid rgba(132, 166, 127, 0.5);
     height: 25px;
     margin-bottom: 10px;
-    width: 82px;
+    width: 125px;
+    height: 40px;
 }
 
 .right_mid_select{
@@ -133,12 +136,15 @@
     padding: 10px 0 10px 15px;
     margin : 30px auto 0 0px;
     width: 100%;
+    height: 510px;
     border-radius: 25px;
     border: 1px solid #84a67f;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .CommList_main{
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     margin : 0;
