--- a/src/components/Fixed.module.css
+++ b/src/components/Fixed.module.css
@@ -2,7 +2,8 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;  
+    right: 0; 
+    z-index: 1000; 
 }
 
 .header{
@@ -44,6 +45,8 @@ header {
     height: 30px;
     border-top: solid 1px #ccc;
     border-bottom: solid 1px #ccc;
+    background-color: white;
+    z-index: 999;
 }
 
 .navflex{
@@ -53,6 +56,8 @@ header {
     position: absolute;
     left: 70px;
     cursor: pointer;
+    font-size: 13px;
+    margin-top: 5px;
 }
 
 .navTextMargin{
