--- a/src/pages/Mainpages/Main1.module.css
+++ b/src/pages/Mainpages/Main1.module.css
@@ -4,24 +4,23 @@
     height: 200px;
     background-color:#84a67f;
     border-radius: 20px;
-    position: relative;
     margin: 230px auto 0 auto;
 }
 
 .mainTitleText {
     font-size: 23px;
     color: white;
-    position: relative;
-    margin: 0 0 0 70px;
-    top: 30px;
+    margin-left: 50px;
+    padding-top: 30px;
     font-weight: bold;
 }
 
 .mainText {
     font-size: 30px;
     color: white;
-    margin-left: 50vh;
+    margin-left: 45vh;
     line-height: 130%;
+    margin-top: -35px;
 }
 
 .main2Container {
@@ -59,19 +58,36 @@
     padding-left: 40px;
 }
 
-.main3Container {
+/* .main3Container {
     color: black;
     display: flex;
     justify-content: space-around;
     margin-top: 70px;
     margin-left: -100px;
+} */
+
+.main3Container {
+    color: black;
+    display: flex;
+    width: 170vh;
+    justify-content: space-around;
+    margin: 70px auto 0 auto;
 }
+
+/* .main3Box1 {
+    background-color:#f9ecb1;
+    width: 117vh;
+    height: 170px;
+    margin-left: 100px;
+    border-radius: 10px;
+    cursor: pointer;
+} */
 
 .main3Box1 {
     background-color:#f9ecb1;
     width: 117vh;
     height: 170px;
-    margin-left: 100px;
+    /* margin-left: 100px; */
     border-radius: 10px;
     cursor: pointer;
 }
@@ -138,10 +154,18 @@
     margin-left: 20px;
 }
 
-.main2Text2 {
+/* .main2Text2 {
     display: flex;
     justify-content: start;
     font-size: 25px;
+    margin-top: 10px;
+    margin-left: 20px;
+} */
+
+.main2Text2 {
+    display: flex;
+    justify-content: start;
+    font-size: 18px;
     margin-top: 10px;
     margin-left: 20px;
 }
