--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -132,10 +132,10 @@
     flex-direction: column;
     /* justify-content: space-between; */
     align-items: left;
-    padding: 10px 0 10px 15px;
-    margin : 30px auto 0 0px;
+    padding: 0 0 0 15px;
+    margin : 0 auto 0 0px;
     width: 100%;
-    height: 510px;
+    height: 340px;
     border-radius: 25px;
     border: 1px solid #84a67f;
     overflow-y: auto;
@@ -160,7 +160,8 @@
 
 .main_h3 {
     margin : 10px 0 10px 0 ;
-    font-size: 22px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .main_bottom{
