--- a/src/pages/selftest/Blue/Blue.module.css
+++ b/src/pages/selftest/Blue/Blue.module.css
@@ -52,7 +52,6 @@
 
 .section2dsign span{
     position: relative;
-    top: 10px;
     color: white;
     font-weight: 500;
 }
@@ -140,6 +139,7 @@
 }
 
 /* 테스트 파트 반복 부분 */
+
 .testpart2{
     display: flex;
     justify-content: start;
@@ -179,9 +179,9 @@
 }
 
  /* 테스트 마지막 선택 항목 버튼 */
-.part2circlelast{
+ .part2circlelast {
     box-sizing: border-box;
-    border-radius: 70px;
+    border-radius: 50%;
     width: 50px;
     height: 50px;
     border: solid 1px gray;
@@ -193,8 +193,9 @@
 }
 
 .active {
-    background-color: rgb(151, 190, 162);
-    border: 2px solid rgb(151, 190, 162);
+    background-color: #FFC107;
+    border: 2px solid #FFC107;
+    position: relative; /* 필요한 경우 */
 }
 
 .active::after {
@@ -202,11 +203,12 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(45deg);
-    width: 10px;
-    height: 20px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
+    transform: translate(-50%, -50%);
+    width: 23px;
+    height: 23px;
+    background-color: #FFC107;
+    border-radius: 50%;
+    box-shadow: 0 0 0 8px white, 0 0 0 10px #FFC107; /* 내부 및 외부 동심원 */
 }
 
 .lastButton {
@@ -233,11 +235,13 @@
     display: flex;
     justify-content: center;
 }
+
 .nextPage p{
     color: white;
     position: relative;
     top: 8px;
 }
+
 .nextPageline{
     display: inline-block;
     background-color: white;
@@ -247,6 +251,7 @@
     top: 20px;
     margin-left: 20px;
 }
+
 .nextPageArrow{
     display: inline-block;
     width: 10px;
@@ -258,6 +263,7 @@
     top: 16px;
     left: -9px;
 }
+
 .priviousPageline{
     display: inline-block;
     background-color: white;
@@ -267,6 +273,7 @@
     top: 20px;
     margin-right: 20px;
 }
+
 .priviousPageArrow{
     display: inline-block;
     width: 10px;
@@ -278,6 +285,7 @@
     top: 16px;
     left: -175px;
 }
+
 /* 테스트 결과 박스 */
 .resultBox{
     box-sizing: border-box;
@@ -289,10 +297,12 @@
     margin-top: 130px;
     padding: 70px 70px;
 }
+
 .resultText{
     font-size: 23px;
     font-weight: bold;
 }
+
 .resultScoreLine{
     display: inline-block;
     background-color: black;
@@ -300,6 +310,7 @@
     width: 70vh; /* 줄의 길이 */
     margin-top: 70px;
 }
+
 .resultScoreLine img{
     float: right;
     position: relative;
@@ -307,26 +318,31 @@
     left: 24px;
     width: 30px;
 }
+
 .scoreText{
     font-size: 20px;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
 }
+
 .resultHighlight{
     color: rgb(53, 92, 64);
     font-size: 19px;
     font-weight: bold;
 }
+
 .resultIntro{
     margin-top: 90px;
     font-size: 17px;
 }
+
 .resultIntro img{
     width: 30px;
     position: relative;
     bottom: 5px;
 }
+
 .resultLink{
     display: flex;
     justify-content: end;
@@ -335,6 +351,7 @@
     margin-top: 60px;
     cursor: pointer;
 }
+
 .resultArrow2{
     display: inline-block;
     width: 8px;
@@ -346,6 +363,7 @@
     top: 7.5px;
     right: 6px;
 }
+
 .plusline{
     display: inline-block;
     background-color: black;
@@ -355,7 +373,9 @@
     top: 10px;
     margin-left: 5px;
 }
+
 /* 우울증 결과 추천영상 */
+
 .recommendBox{
     box-sizing: border-box;
     width: 750px;
@@ -366,14 +386,17 @@
     margin-top: 100px;
     border-radius: 10px;
 }
+
 .recommendBox p{
     font-size: 20px;
     font-weight: bold;
 }
+
 .recomendVideo{
     display: flex;
     justify-content: space-between;
 }
+
 .recomendVideoBox{
     box-sizing: border-box;
     background-color: black;
@@ -382,24 +405,32 @@
     height: 200px;
     margin-top: 20px;
 }
+
 /*우울증 추천 활동 */
+
 .recommendActive{
     display: flex;
     justify-content: space-between;
+
 }
+
 .recommendActive img{
     width: 130px;
     margin-top: 50px;
 }
+
 .recommendActive span{
     margin-left: 35px;
 }
+
 /* 마지막 부분 버튼 */
+
 .resultButtonBox{
     margin-top: 100px;
     display: flex;
     justify-content: center;
 }
+
 .resultButton1{
     background-color: rgb(93, 109, 98);
     color: white;
@@ -411,6 +442,7 @@
     margin-left: 70px;
     font-weight: bold;
 }
+
 .resultButton2{
     background-color: rgb(179, 177, 177);
     color: black;
@@ -420,3 +452,4 @@
     height: 50px;
     font-weight: bold;
 }
+
