--- a/src/pages/selftest/anxiety/Anxiety.module.css
+++ b/src/pages/selftest/anxiety/Anxiety.module.css
@@ -52,7 +52,6 @@
 
 .section2dsign span{
     position: relative;
-    top: 10px;
     color: white;
     font-weight: 500;
 }
@@ -76,6 +75,7 @@
     line-height: 12%;
     font-size: 11px;
     font-weight: bold;
+    margin-bottom: 100px;
 }
 
 .section4p1{
@@ -139,6 +139,7 @@
 }
 
 /* 테스트 파트 반복 부분 */
+
 .testpart2{
     display: flex;
     justify-content: start;
@@ -178,9 +179,9 @@
 }
 
  /* 테스트 마지막 선택 항목 버튼 */
-.part2circlelast{
+ .part2circlelast {
     box-sizing: border-box;
-    border-radius: 70px;
+    border-radius: 50%;
     width: 50px;
     height: 50px;
     border: solid 1px gray;
@@ -188,14 +189,34 @@
     margin-right: 30px;
     background-color: white;
     margin-left: 50px;
+    position: relative; /* 체크 마크 위치를 위해 필요 */
 }
 
-.part2circlelast span{
-    position: relative;
-    left: -px;
+.active {
+    background-color: #FFC107;
+    border: 2px solid #FFC107;
+    position: relative; /* 필요한 경우 */
 }
 
-/* 다음 페이지 버튼 */
+.active::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 23px;
+    height: 23px;
+    background-color: #FFC107;
+    border-radius: 50%;
+    box-shadow: 0 0 0 8px white, 0 0 0 10px #FFC107; /* 내부 및 외부 동심원 */
+}
+
+.lastButton {
+    margin-left: 100px;
+    margin-right: -15px;
+}
+
+/* 이전, 다음 페이지 버튼 */
 .pageButtonBox{
     display: flex;
     justify-content: center;
@@ -203,7 +224,7 @@
 
 .nextPage{
     box-sizing: border-box;
-    background-color:#84a67f;
+    background-color: rgb(152, 173, 158);
     width: 300px;
     height: 43px;
     border-radius: 10px;
@@ -271,7 +292,7 @@
     width: 800px;
     height: 500px;
     border-radius: 30px;
-    background-color:#bcddb7;
+    background-color: rgb(197, 231, 207);
     margin-left: 28vh;
     margin-top: 130px;
     padding: 70px 70px;
