프로 커뮤 리스트 연동

--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -26,6 +26,7 @@
 .CommList_left_p2{
     color:#cfcfcf;
     font-family: 'Pretendard', sans-serif;
+    cursor: pointer;
 }
 
 /* ======================================================= */
